examples/bad/ERROR_INCORRECT_ARITY_OF_MAIN/main_with_two_params.st
language core;

extend with #multiparameter-functions;

fn main(n : Nat, z : Nat) -> Nat {
    return z
}

//ERROR_INCORRECT_ARITY_OF_MAIN
